test/readonly/fail/array_length04.v3
//@execute 0 = 3
var x: array<int> = [0, 1, 2];
def main(a: int) -> int {
	return array.length(x);
}
